--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </a>
                             <div class="card-body">
                                 <p class="card-text">SCIENCE MUSEUM</p>
-                                <p>The project exam should reflect the student's creative and technical knowledge and skills based on the first semester curriculum. This includes design principles, project management, communication technology, and developing with HTML/CSS.</p>
+                                <p>The project exam should reflect my creative and technical knowledge and skills based on the first semester curriculum. This includes design principles, project management, communication technology, and developing with HTML/CSS.</p>
                             </div>
                     </div>
                 </div>
@@ -117,26 +117,28 @@
                 <h2>About Me</h2>
             
                 <div class="row">
-                <div class="col-sm-6"><p>Something thaT tells people that I am a løøvin' person</p></div>
-                <div class="col-sm-4"><img src="images/me.jpg" alt=""></div>
-                <div class="col-sm-6">Random Facts
-                    - løv cats 
-                    - gardning
-                    - 
-                </div>
+                    <div class="col-sm-6"><p> I am a 27 year woman and are soon done with my education at Noroff - Front-end developer. 
+                        I am married to an awesome man and a mother to two lovely children and our beautiful cat.</p>
+                    </div>
+                    <div class="col-sm-4"><img src="images/me.jpg" alt=""></div>
+                    <div class="col-sm-6"><h5> Random Facts</h5>
+                    - My terapy is gardning
+                    - Like to watch Star Trek 
+                    
+                    </div>
                 </div>
             </div>
             <div id="col4">
                 <h2>Skills</h2>
                 <div class="row">
                     <div class=" col-sm-4" style="width: 18rem;">
-                        <button class="card-img-top">HTML 40%</button>
+                        <button class="card-img-top">HTML 45%</button>
                     </div>
                     <div class=" col-sm-4" style="width: 18rem;">
-                        <button class="card-img-top">CSS 40%</button>
+                        <button class="card-img-top">CSS 45%</button>
                     </div>
                     <div class=" col-sm-4" style="width: 18rem;">
-                        <button class="card-img-top">JavaScript 20%</button>
+                        <button class="card-img-top">JavaScript 10%</button>
                     </div>
                 </div>
             </div>
